fixed alignment of header in news page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,16 +49,16 @@ p {
 .common_section {
   margin: 50px 0;
 }
-<<<<<<< HEAD
-=======
+/* <<<<<<< HEAD */
+/* ======= */
 /*img{
   border-radius: 10px;
 } */
->>>>>>> 26fc3532aa7d5b21048411ef84f0b3f1c165ae85
+/* >>>>>>> 26fc3532aa7d5b21048411ef84f0b3f1c165ae85 */
 
-img {
+/* img {
   border-radius: 10px;
-}
+} */
 
 */ .carousel-item img {
   border-radius: 0;
@@ -112,9 +112,9 @@ img {
   color: var(--header-primary-clr);
 }
 /* section haeding part end */
-<<<<<<< HEAD
+/* <<<<<<< HEAD */
 /* >>>>>>> 70d9e029af5ce56576af0d6476cb82e536a83e0b */
-=======
+/* ======= */
 
 
 /* view all  */
@@ -124,4 +124,4 @@ img {
     margin: 10px 0;
     text-transform: uppercase;
 }
->>>>>>> 26fc3532aa7d5b21048411ef84f0b3f1c165ae85
+/* >>>>>>> 26fc3532aa7d5b21048411ef84f0b3f1c165ae85 */
